catkin_ws/logs/iq_gnc/build.make.530.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_gpsVelSub_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:332:121: error: lvalue required as left operand of assignment
  332 |   if(!drone1_gps_vel_g.twist.linear.x = 0 && !drone1_gps_vel_g.twist.linear.y = 0 && !drone1_gps_vel_g.twist.linear.z = 0){
      |                                                                                                                         ^
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1804: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
